--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@ body {
   background-color: #2d2013;
   color: #fff;
   margin: 0;
+  padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
@@ -157,8 +161,8 @@ form button {
     width: 700px;
   }
   .single-meal img {
-    height: 400px;
-    width: 400px;
+    aspect-ratio: 1;
+    width: 90%;
   }
   .info {
     flex-direction: column;
@@ -174,13 +178,24 @@ form button {
 @media (max-width: 650px) {
   .meals {
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5px;
+  }
+  .meal {
+    width: 175px;
+    height: 175px;
   }
   .single-meal {
-    width: 600px;
+    width: 100%;
   }
   .single-meal img {
-    height: 450px;
-    width: 450px;
+    height: 300px;
+    width: 300px;
+  }
+  .meal-info {
+    margin: 0 10px;
+    opacity: 1;
+    background: transparent;
+    color: black;
   }
   .info {
     flex-direction: column;
